--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,12 @@
   "name": "SDEC Extras V2",
   "description": "Extension pour SDEC Coba",
   "version": "2.0.0",
-
+  "browser_specific_settings": {
+    "safari": {
+        "strict_min_version": "15.4",
+        "strict_max_version": "*"
+    }
+  },
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -14,8 +19,7 @@
     "default_popup": "pages/hello.html"
   },
   "options_ui": {
-    "page": "pages/options.html",
-    "open_in_tab": true
+    "page": "pages/options.html"
   },
   "content_scripts": [
     {
