Fixed issue where web_accessible_resources weren't accessible.

--- a/manifest.json
+++ b/manifest.json
@@ -46,11 +46,11 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "/images/*",
-        "/styles/*",
-        "/themes/*",
-        "/scripts/*",
-        "/pages/*"
+        "images/*",
+        "styles/*",
+        "themes/*",
+        "scripts/*",
+        "pages/*"
       ],
       "matches": ["<all_urls>"]
     }
